online/efk_online/jenkins-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-jenkins-route-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik-cert
  routes:
    - match: Host(`jenkins.artron.net`)
      kind: Rule
      services:
        - name: jenkins-svc
          port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-jenkins-route-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.artron.net`)
      kind: Rule
      services:
        - name: jenkins-svc
          port: 8080
      middlewares:
        - name: redirect-https
          namespace: ingress-system
